--- a/.gitignore
+++ b/.gitignore
@@ -10,9 +10,14 @@
 # generated files
 bin/
 gen/
-
+build/
+build.gradle
+.gradle/
+gradle*
+*.gradle
 # Local configuration file (sdk path, etc)
 local.properties
+*.properties
 
 # Eclipse project files
 .classpath
